[package]
name = "rs_turn"
version = "0.1.0"
authors = ["js-depond <js-depond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { package = "webrtc-util", version = "0.1.17" }
stun = { package = "webrtc-stun", version = "0.1.13" }
lazy_static = "1.3.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
log = "0.4"
base64 = "0.13.0"
rand = "0.8.2"
ring = "0.16.19"
md-5 = "0.9.1"